# roscon-25-workshop

./: .gitmodules  LICENSE  README.md
.devcontainer/linux/: devcontainer.json
.devcontainer/nogui/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.github/workflows/: build-image.yml
docker/: Dockerfile  README.md  docker_build_amd64.sh  docker_run.sh  docker_run_nogui.sh  docker_run_wsl.sh  entrypoint.sh
docker/scripts/: build_opencv.sh  build_px4.sh  build_ros_deps.sh  install_deps.sh  install_qgc.sh  params_override.patch
docs/: prerequisites.md  setup.md
foxglove/: roscon-25-workshop.json
px4_roscon_25/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  README  README.md  package.xml
px4_roscon_25/aruco_tracker/cfg/: bridge.yaml
px4_roscon_25/aruco_tracker/launch/: aruco_tracker.launch.py
px4_roscon_25/custom_mode_demo/: CustomMode.cpp  CustomMode.hpp  CustomModeExecutor.cpp  CustomModeExecutor.hpp  README.md  package.xml
px4_roscon_25/custom_mode_demo/launch/: custom_mode_demo.launch.py
px4_roscon_25/offboard_demo/: OffboardDemo.cpp  OffboardDemo.hpp  README.md  package.xml
px4_roscon_25/offboard_demo/launch/: offboard_demo.launch.py
px4_roscon_25/precision_land/: CMakeLists.txt  PrecisionLand.cpp  PrecisionLand.hpp  README.md  package.xml
px4_roscon_25/precision_land_executor/: CMakeLists.txt  CustomModeExecutor_v2.cpp  CustomModeExecutor_v2.hpp  CustomMode_v2.cpp  CustomMode_v2.hpp  README.md  package.xml
px4_roscon_25/precision_land_executor/cfg/: clock_bridge.yaml
px4_roscon_25/precision_land_executor/launch/: precision_land_executor.launch.py
px4_roscon_25/px4_roscon_25/: CMakeLists.txt  README.md  package.xml
px4_roscon_25/px4_roscon_25/launch/: common.launch.py
px4_roscon_25/px4_roscon_25/urdf/: x500.urdf
px4_roscon_25/px4_tf/: CMakeLists.txt  README.md  package.xml
px4_roscon_25/px4_tf/include/px4_tf/: px4_tf_publisher_node.hpp
px4_roscon_25/px4_tf/src/: px4_tf_publisher.cpp  px4_tf_publisher_node.cpp
px4_roscon_25/teleop/: CMakeLists.txt  README.md  Teleop.cpp  Teleop.hpp  package.xml
px4_roscon_25/teleop/cfg/: bridge.yaml  params.yaml
px4_roscon_25/teleop/launch/: teleop.launch.py
px4_roscon_25/teleop_twist_rpyt_keyboard/: README.md  package.xml  setup.cfg  teleop_twist_rpyt_keyboard.py
src/aruco_tracker/: ArucoTracker.hpp  CMakeLists.txt  README  package.xml
src/aruco_tracker/launch/: aruco_tracker.launch.py
src/custom_mode_demo/: CMakeLists.txt  CustomMode.cpp  CustomMode.hpp  package.xml
src/offboard_demo/: CMakeLists.txt  OffboardDemo.hpp  package.xml
src/precision_land/: PrecisionLand.cpp
src/teleop/: TeleopExecutor.cpp  TeleopExecutor.hpp
src/teleop/launch/: teleop.launch.py
src/teleop_twist_rpyt_keyboard/: README.md  setup.py
