<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_mode_demo</name>
  <version>0.0.1</version>
  <description>Custom mode example using PX4 ROS 2 interface.</description>

  <maintainer email="pordipatrik@gmail.com">patrik_ark</maintainer>
  <maintainer email="beniamino.pozzan@gmail.com">Beniamino Pozzan</maintainer>
  <license>CC-BY-SA-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>geometry_msgs</depend>

  <!-- Optional test tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>