<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_roscon_25</name>
  <version>0.0.1</version>
  <description>Utility package to facilitate communication between PX4 and ROS 2</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>CC-BY-SA-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>px4_tf</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
